# gen/httpapi/oas_response_encoders_gen.go
@@ -11,52 +11,6 @@ import (
 	"go.opentelemetry.io/otel/trace"
 )
 
-func encodeActivateTenantResponse(response ActivateTenantRes, w http.ResponseWriter, span trace.Span) error {
-	switch response := response.(type) {
-	case *TenantResponse:
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		w.WriteHeader(200)
-		span.SetStatus(codes.Ok, http.StatusText(200))
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	case *ActivateTenantNotFound:
-		w.Header().Set("Content-Type", "application/problem+json")
-		w.WriteHeader(404)
-		span.SetStatus(codes.Error, http.StatusText(404))
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	case *ActivateTenantInternalServerError:
-		w.Header().Set("Content-Type", "application/problem+json")
-		w.WriteHeader(500)
-		span.SetStatus(codes.Error, http.StatusText(500))
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	default:
-		return errors.Errorf("unexpected response type: %T", response)
-	}
-}
-
 func encodeCreateTenantResponse(response CreateTenantRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
 	case *TenantResponse:
@@ -99,52 +53,6 @@ func encodeCreateTenantResponse(response CreateTenantRes, w http.ResponseWriter,
 		return nil
 
 	case *CreateTenantInternalServerError:
-		w.Header().Set("Content-Type", "application/problem+json")
-		w.WriteHeader(500)
-		span.SetStatus(codes.Error, http.StatusText(500))
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	default:
-		return errors.Errorf("unexpected response type: %T", response)
-	}
-}
-
-func encodeDeactivateTenantResponse(response DeactivateTenantRes, w http.ResponseWriter, span trace.Span) error {
-	switch response := response.(type) {
-	case *TenantResponse:
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		w.WriteHeader(200)
-		span.SetStatus(codes.Ok, http.StatusText(200))
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	case *DeactivateTenantNotFound:
-		w.Header().Set("Content-Type", "application/problem+json")
-		w.WriteHeader(404)
-		span.SetStatus(codes.Error, http.StatusText(404))
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	case *DeactivateTenantInternalServerError:
 		w.Header().Set("Content-Type", "application/problem+json")
 		w.WriteHeader(500)
 		span.SetStatus(codes.Error, http.StatusText(500))
@@ -214,7 +122,7 @@ func encodeDeleteTenantResponse(response DeleteTenantRes, w http.ResponseWriter,
 	}
 }
 
-func encodeGetActiveTenantSlugsResponse(response GetActiveTenantSlugsRes, w http.ResponseWriter, span trace.Span) error {
+func encodeGetEnabledTenantSlugsResponse(response GetEnabledTenantSlugsRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
 	case *TenantSlugListResponse:
 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
